--- a/portal-frontend/src/app/shared/owner-dialogs/parcel-owners/parcel-owners.component.html
+++ b/portal-frontend/src/app/shared/owner-dialogs/parcel-owners/parcel-owners.component.html
@@ -21,7 +21,7 @@
     </ng-container>
 
     <ng-container *ngIf="isCrown" matColumnDef="organizationName">
-      <th mat-header-cell *matHeaderCellDef>Ministry/ Department</th>
+      <th mat-header-cell *matHeaderCellDef>Ministry or Department</th>
       <td mat-cell *matCellDef="let element">{{ element.organizationName }}</td>
     </ng-container>
 
