--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-entry/parcel-entry.component.html
@@ -297,7 +297,7 @@
         Add new gov contact
       </button>
       <h6 class="owner-search-option" *ngIf="filteredOwners.length">OR</h6>
-      <label for="owner-search" *ngIf="filteredOwners.length">Select from Existing Government</label>
+      <label for="owner-search" *ngIf="filteredOwners.length">Select from Existing Government Contacts</label>
       <div>
         <mat-radio-group
           color="primary"
@@ -325,7 +325,7 @@
               <div class="value">{{ selectedOwner.lastName }}</div>
             </div>
             <div class="row"> 
-              <div class="key"><strong>Ministry/ Department:</strong> </div>
+              <div class="key"><strong>Ministry or Department:</strong> </div>
               <div class="value">{{ selectedOwner.organizationName }}</div>
             </div>
             <div class="row"> 
@@ -341,7 +341,7 @@
               <div class="value">{{ selectedOwner.crownLandOwnerType }}</div>
             </div>
             <div class="row"> 
-              <button [disabled]="_disabled" (click)="onEdit(selectedOwner)" mat-stroked-button>Edit information</button>
+              <button [disabled]="_disabled" (click)="onEdit(selectedOwner)" mat-flat-button>Edit information</button>
             </div>
           </div>
         </div>
