--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-entry/parcel-entry.component.html
@@ -341,8 +341,8 @@
               <div class="key"><strong>Crown Type:</strong> </div>
               <div class="value">{{ selectedOwner.crownLandOwnerType }}</div>
             </div>
-            <div class="row"> 
-              <button [disabled]="_disabled" (click)="onEdit(selectedOwner)" mat-flat-button>Edit information</button>
+            <div class="row">
+              <button [disabled]="_disabled" (click)="onEditCrownOwner(selectedOwner)" mat-flat-button>Edit information</button>
             </div>
           </div>
         </div>
