Vertically align checkboxs for all viewport width and update description

--- a/portal-frontend/src/app/features/applications/review-submission/review-resolution/review-resolution.component.html
+++ b/portal-frontend/src/app/features/applications/review-submission/review-resolution/review-resolution.component.html
@@ -1,7 +1,7 @@
 <h2>Resolution</h2>
 <div>
   <div class="description">
-    <div>Provide the {{ governmentName }} resolution</div>
+    <div>Provide the {{ governmentName }} resolution outcome</div>
   </div>
   <div *ngIf="!isFirstNationGovernment && (this.isOCPDesignation === null || this.isSubjectToZoning === null)">
     Please complete both Step 2 Plans & Bylaws: OCP and Step 3 Plans & Bylaws: Zoning to continue with this step.
