ui fixes for gov contact

--- a/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
@@ -295,6 +295,7 @@
         class="new-owner"
         *ngIf="enableAddNewOwner"
         (click)="onAddNewGovernmentContact()"
+        [ngClass]="{ 'mat-error': ownerInput.errors && ownerInput.errors['required'] }"
         mat-flat-button
         color="primary"
       >
