--- a/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-entry/parcel-entry.component.scss
+++ b/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-entry/parcel-entry.component.scss
@@ -132,5 +132,17 @@ mat-button-toggle-group#isFarm {
     flex-grow: 1;
     overflow: hidden;
     text-overflow: ellipsis;
-  }  
+  } 
+
+  @media screen and (max-width: $tabletBreakpoint) {
+    .row {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .key {
+      width: auto;
+      margin-bottom: rem(5);
+    }
+  }
 }
