--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-entry/parcel-entry.component.html
@@ -293,7 +293,7 @@
         (click)="onAddNewGovernmentContact()"
         mat-flat-button
         color="primary"
-        [disabled]="_disabled || parcel.owners.length > 0"
+        [ngClass]="{ 'mat-error': ownerInput.errors && ownerInput.errors['required'] }"
       >
         Add new gov contact
       </button>
