Fix confirmation styling

--- a/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact-confirmation-dialog/primary-contact-confirmation-dialog.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact-confirmation-dialog/primary-contact-confirmation-dialog.component.html
@@ -3,12 +3,9 @@
 </div>
 
 <div mat-dialog-content class="content">
-  <!-- <app-warning-banner> -->
-  <div>
+  <app-warning-banner>
     Changing the answer to this question will remove content already saved to this page. Do you want to continue?
-  </div>
-  <br />
-  <!-- </app-warning-banner> -->
+  </app-warning-banner>
 
   <div class="step-controls">
     <button mat-stroked-button color="primary" (click)="onDecide(false)">cancel</button>
