Make selected contact editable

--- a/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact.component.html
@@ -69,7 +69,7 @@
               <div class="value">{{ email.value }}</div>
             </div>
             <div class="row">
-              <button mat-stroked-button>Edit information</button>
+              <button mat-stroked-button (click)="onEdit(selectedOwnerUuid)">Edit information</button>
             </div>
           </div>
         </div>
