--- a/portal-frontend/src/app/features/applications/view-submission/alc-review/alc-review.component.html
+++ b/portal-frontend/src/app/features/applications/view-submission/alc-review/alc-review.component.html
@@ -3,7 +3,7 @@
     <h2>ALC Review and Decision</h2>
   </div>
   <div *ngIf="showUpdateAfterSubmitLabel" class="warning">
-    This section will update after the application is submitted to the ALC.
+    <mat-icon>info</mat-icon>This section will update after the application is submitted to the ALC.
   </div>
   <div *ngIf="application.status.code === SUBMISSION_STATUS.REFUSED_TO_FORWARD_LG" class="warning">
     Application not subject to Agricultural Land Commission review.
