--- a/portal-frontend/src/app/features/notice-of-intents/view-submission/alc-review/alc-review.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/view-submission/alc-review/alc-review.component.html
@@ -3,7 +3,7 @@
     <h2>ALC Review and Decision</h2>
   </div>
   <div *ngIf="noiSubmission.status.code === NOI_SUBMISSION_STATUS.IN_PROGRESS" class="warning">
-    This section will update after the Notice of Intent is submitted to the ALC.
+    <mat-icon>info</mat-icon>This section will update after the Notice of Intent is submitted to the ALC.
   </div>
   <div *ngIf="noiSubmission.status.code !== NOI_SUBMISSION_STATUS.IN_PROGRESS">
     <app-decisions [fileNumber]="noiSubmission.fileNumber"></app-decisions>
