--- a/portal-frontend/src/app/features/notifications/view-submission/alc-review/alc-review.component.html
+++ b/portal-frontend/src/app/features/notifications/view-submission/alc-review/alc-review.component.html
@@ -3,7 +3,7 @@
     <h3>ALC Review and Response</h3>
   </div>
   <div *ngIf="notificationSubmission.status.code === NOTIFICATION_STATUS.IN_PROGRESS" class="warning">
-    This section will update after the notification is submitted to the ALC.
+    <mat-icon>info</mat-icon>This section will update after the notification is submitted to the ALC.
   </div>
   <div
     *ngIf="
