Scroll user to owner info upon selection

--- a/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact.component.html
@@ -47,6 +47,7 @@
         </mat-radio-group>
 
         <div
+          id="owner-info"
           class="warning-banner"
           *ngIf="selectedOwnerUuid && selectedOwnerUuid !== 'agent' && !selectedLocalGovernment"
         >
