--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/primary-contact/primary-contact.component.html
@@ -48,6 +48,7 @@
         </mat-radio-group>
 
         <div
+          id="owner-info"
           class="warning-banner"
           *ngIf="selectedOwnerUuid && selectedOwnerUuid !== 'agent' && !selectedLocalGovernment"
         >
