Apply portal-wide UI updates with uploader and step description

--- a/portal-frontend/src/app/features/applications/edit-submission/other-parcels/other-parcels.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/other-parcels/other-parcels.component.html
@@ -2,7 +2,7 @@
   <h2>Other Owned Parcels</h2>
   <div class="step-description">
     <div>
-      <p>*All fields are required unless stated optional.</p>
+      <p>*All fields are required unless stated optional or disabled.</p>
     </div>
   </div>
   <form [formGroup]="otherParcelsForm" class="other-parcels-form">
