--- a/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact.component.html
@@ -5,7 +5,7 @@
     Identify staff from the local or first nation government listed below or a third-party agent to act as the primary
     contact.
   </p>
-  <p>*All fields are required unless stated optional.</p>
+  <p>*All fields are required unless stated optional or disabled.</p>
   <div class="step-documents">
     <h6>Documents needed for this step:</h6>
     <ul>
