--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/pfrs-proposal/pfrs-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/pfrs-proposal/pfrs-proposal.component.html
@@ -4,7 +4,7 @@
     Considerations are subject to
     <a> Section 6 of the ALC Act. </a>
   </p>
-  <p>All fields are required unless stated optional.</p>
+  <p>All fields are required unless stated optional or disabled.</p>
 </div>
 <app-warning-banner>
   In order to complete this step, please consult the following pages on the ALC website:
