--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/land-use/land-use.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/land-use/land-use.component.html
@@ -2,7 +2,7 @@
   <div class="step-description">
     <h2>Land Use</h2>
     <p>Current land use of parcel(s) under notice of intent and adjacent parcels.</p>
-    <p>*All fields are required unless stated optional.</p>
+    <p>*All fields are required unless stated optional or disabled.</p>
   </div>
   <form [formGroup]="landUseForm" class="land-use-form">
     <h5>Land Use of Parcel(s) under Notice of Intent</h5>
