--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-details.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-details.component.html
@@ -2,7 +2,7 @@
   <div class="step-description">
     <h2>Identify Parcels Under Notice of Intent</h2>
     <p>Provide parcel identification and registered ownership information for each parcel.</p>
-    <p>*All fields are required unless stated optional.</p>
+    <p>*All fields are required unless stated optional or disabled.</p>
     <div class="step-documents">
       <h6>Documents needed for this step:</h6>
       <ul>
