--- a/portal-frontend/src/app/features/notifications/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/primary-contact/primary-contact.component.html
@@ -3,7 +3,7 @@
   <p>
     Enter the contact information for the person who is submitting the SRW package to the Land Title Survey Authority.
   </p>
-  <p>*All fields are required unless stated optional.</p>
+  <p>*All fields are required unless stated optional or disabled.</p>
 </div>
 <section>
   <div class="form">
