--- a/portal-frontend/src/app/features/notifications/edit-submission/proposal/proposal.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/proposal/proposal.component.html
@@ -1,6 +1,6 @@
 <div class="step-description">
   <h2>Purpose of SRW</h2>
-  <p>* All fields are required unless stated optional.</p>
+  <p>* All fields are required unless stated optional or disabled.</p>
 </div>
 <app-warning-banner>
   The information entered below will be reflected in the automatically generated notification response and must match
