--- a/portal-frontend/src/app/features/notifications/edit-submission/transferees/transferees.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/transferees/transferees.component.html
@@ -1,7 +1,7 @@
 <div class="step-description">
   <h2>Identify Transferee(s)</h2>
   <p>Provide the name and contact information for all transferees who will be registered owners of the SRW.</p>
-  <p>*All fields are required unless stated optional.</p>
+  <p>*All fields are required unless stated optional or disabled.</p>
 </div>
 <section>
   <div class="split">
