--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
@@ -58,3 +58,4 @@
 <app-validation-error *ngIf="!disabled && showVirusError" errorClass="field-error">
   A virus was detected in the file. Choose another file and try again.
 </app-validation-error>
+<mat-hint class="subtext">Maximum file size: 100 MB</mat-hint>
