--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/subd-proposal/subd-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/subd-proposal/subd-proposal.component.html
@@ -4,7 +4,7 @@
     Considerations are subject to
     <a> Section 6 of the ALC Act. </a>
   </p>
-  <p>*All fields are required unless stated optional.</p>
+  <p>*All fields are required unless stated optional or disabled.</p>
   <div class="step-documents">
     <h6>Documents needed for this step:</h6>
     <ul>
