--- a/portal-frontend/src/app/features/notifications/edit-submission/select-government/select-government.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/select-government/select-government.component.html
@@ -1,7 +1,7 @@
 <div class="step-description">
   <h2>Government</h2>
   <p>Please indicate the local or First Nation government in which the parcel(s) are located.</p>
-  <p>*All fields are required unless stated optional.</p>
+  <p>*All fields are required unless stated optional or disabled.</p>
 </div>
 <form [formGroup]="form">
   <div class="form-row">
