Apply application-wide UI updates

--- a/portal-frontend/src/app/features/applications/edit-submission/other-attachments/other-attachments.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/other-attachments/other-attachments.component.html
@@ -8,7 +8,7 @@
   include confidential material within your application.
 </p>
 <section>
-  <div class="subheading2">Optional Attachments (Max. 100 MB per attachment)</div>
+  <div class="subheading2">Optional Attachments</div>
   <div class="uploader">
     <app-file-drag-drop (uploadFiles)="attachDocument($event)" [showVirusError]="showVirusError"></app-file-drag-drop>
   </div>
