--- a/portal-frontend/src/app/features/applications/edit-submission/other-attachments/other-attachments.component.scss
+++ b/portal-frontend/src/app/features/applications/edit-submission/other-attachments/other-attachments.component.scss
@@ -2,11 +2,11 @@
 @use '../../../../../styles/colors';
 
 section {
-  margin-top: rem(32);
+  margin-top: rem(16);
 }
 
 .uploader {
-  margin-top: rem(12);
+  margin: rem(12) 0;
 }
 
 h4 {
