--- a/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact.component.html
@@ -79,9 +79,9 @@
           </div>
         </div>
       </div>
-      <div *ngIf="selectedThirdPartyAgent === false && parcelOwners.length === 0">
+      <app-warning-banner *ngIf="selectedThirdPartyAgent === false && parcelOwners.length === 0">
         No landowners or government contacts are added. Please go back to Step 1 to add information.
-      </div>
+      </app-warning-banner>
       <!-- /Owner -->
 
       <!-- Third-Part Agent/Government -->
