--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/primary-contact/primary-contact.component.html
@@ -175,6 +175,7 @@
     directors within the organization.For Crown parcels or Fee Simple parcels owned by a government, the letter must be
     signed by senior level staff.
   </p>
+  <p class="alc-link">Visit the <a href="https://www.alc.gov.bc.ca/" target="_blank">ALC website</a> for a template.</p>
   <div class="uploader">
     <app-file-drag-drop
       [allowMultiple]="true"
