Hide no owner warning if gov user

--- a/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact.component.html
@@ -79,7 +79,7 @@
           </div>
         </div>
       </div>
-      <app-warning-banner *ngIf="selectedThirdPartyAgent === false && parcelOwners.length === 0">
+      <app-warning-banner *ngIf="selectedThirdPartyAgent === false && parcelOwners.length === 0 && !isGovernmentUser">
         No landowners or government contacts are added. Please go back to Step 1 to add information.
       </app-warning-banner>
       <!-- /Owner -->
