--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/pfrs-proposal/pfrs-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/pfrs-proposal/pfrs-proposal.component.html
@@ -121,10 +121,9 @@
     </div>
     <div class="full-row">
       <mat-label
-        >Of the proposed totals provided above, please input the dimensions of soil that has already been
-        removed.</mat-label
+        >Of the proposed totals provided above, please input the dimensions of soil that has already been removed or
+        fill already placed.</mat-label
       >
-      <div class="subtext">If no proposed soil has already been removed, please leave 0 in the fields below</div>
       <app-soil-table
         *ngIf="!isMobile"
         tableHeader="Soil already Removed"
