--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/pfrs-proposal/pfrs-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/pfrs-proposal/pfrs-proposal.component.html
@@ -4,7 +4,7 @@
     Considerations are subject to
     <a> Section 6 of the ALC Act. </a>
   </p>
-  <p>All fields are required unless stated optional.</p>
+  <p>All fields are required unless stated optional or disabled.</p>
 </div>
 <app-warning-banner>
   In order to complete this step, please consult the following pages on the ALC website:
@@ -121,10 +121,9 @@
     </div>
     <div class="full-row">
       <mat-label
-        >Of the proposed totals provided above, please input the dimensions of soil that has already been
-        removed.</mat-label
+        >Of the proposed totals provided above, please input the dimensions of soil that has already been removed or
+        fill already placed.</mat-label
       >
-      <div class="subtext">If no proposed soil has already been removed, please leave 0 in the fields below</div>
       <app-soil-table
         *ngIf="!isMobile"
         tableHeader="Soil already Removed"
