--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/roso/roso-proposal.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/roso/roso-proposal.component.html
@@ -5,6 +5,25 @@
     <a>FIXME: Section 6 of the ALC Act. </a>
   </p>
   <p>All fields are required unless stated optional or disabled.</p>
+  <mat-expansion-panel #panel [expanded]="true">
+    <mat-expansion-panel-header class="porposal-toggle">
+      <mat-panel-title><strong>READ FIRST: Purposes of the commission </strong>(Section 6 of the ALC Act)</mat-panel-title>
+    </mat-expansion-panel-header>
+    <div class="proposal-toggle-content">
+      <div class="section-header">6 (1) The following are the purposes of the commission:</div>
+      <ul class="list-item">
+        <li>to preserve the agricultural land reserve;</li>
+        <li>to encourage farming of land within the agricultural land reserve in collaboration with other communities of interest;</li>
+        <li>to encourage local governments, first nations, the government and its agents to enable and accommodate farm use of land within the agricultural land reserve and uses compatible with agriculture in their plans, bylaws and policies.</li>
+      </ul>
+    
+      <div class="section-header">6 (2) The commission, to fulfill its purposes under subsection (1), must give priority to protecting and enhancing all of the following in exercising its powers and performing its duties under this Act:</div>
+      <ul class="list-item">
+        <li>the size, integrity and continuity of the land base of the agricultural land reserve;</li>
+        <li>the use of the agricultural land reserve for farm use.</li>
+      </ul>
+    </div>
+  </mat-expansion-panel>
 </div>
 <app-warning-banner>
   In order to complete this step, please consult the following pages on the ALC website:
