confirmation modal changes

--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div mat-dialog-content class="content">
-  <p>Your notice of intent will be submitted to the ALC.</p>
+  <p>Your Notice of Intent will be submitted to the ALC.</p>
   <div>
     <div class="subheading2">Terms and Conditions:</div>
     <mat-checkbox #checkbox1 color="primary" class="checkbox">
@@ -12,17 +12,21 @@
       Regulation, and the Agricultural Land Reserve Use Regulation.
     </mat-checkbox>
     <mat-checkbox #checkbox2 color="primary" class="checkbox">
-      I/we declare that the information provided in the notice of intent and all the supporting documents are, to the
+      I/we declare that the information provided in the Notice of Intent and all the supporting documents are, to the
       best of my/our knowledge, true and correct.
     </mat-checkbox>
     <mat-checkbox #checkbox3 color="primary" class="checkbox">
       I/we understand that the Agricultural Land Commission will take the steps necessary to confirm the accuracy of the
-      information and documents provided. This information will be available for review by any member of the public.
+      information and documents provided. This information, excluding phone numbers and emails, will be available for review 
+      by any member of the public once received by the ALC.
     </mat-checkbox>
   </div>
   <p>
-    If you have any questions about the collection or use of this information, please contact the Agricultural Land
-    Commission.
+    If you have any questions about the collection or use of this information, please 
+    <a
+        href="https://www.alc.gov.bc.ca/contact/"
+        target="_blank"
+      >contact the Agricultural Land Commission.</a>
   </p>
   <div>
     <div class="step-controls">
