--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.scss
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.scss
@@ -17,3 +17,22 @@ p {
     margin-right: rem(16) !important;
   }
 }
+
+.step-controls {
+  display: flex;
+  flex-direction: column-reverse;
+
+  button {
+    width: 100%;
+    margin-top: rem(12) !important;
+  }
+
+  @media screen and (min-width: $tabletBreakpoint) {
+    flex-direction: row;
+    justify-content: space-between;
+
+    button {
+      width: unset;
+    }
+  }
+}
